--- a/pod.yml
+++ b/pod.yml
@@ -8,6 +8,6 @@ metadata:
 spec:
   containers:
     - name: nodeapp
-      image: onyilimba/nodeapp:tagVersion
+      image: likemike123/nodeapp:tagVersion
       ports:
         - containerPort: 8080
